--- a/index.html
+++ b/index.html
@@ -4,7 +4,16 @@
     </head>
     <body>
         <script>
-        var thing = JSON.parse(food);
+            var xmlhttp = new XMLHttpRequest();
+
+        xmlhttp.onreadystatechange = function() {
+        if (this.readyState == 4 && this.status == 200) {
+        var mydata = JSON.parse(this.responseText);
+        window.alert(food.name);
+        }
+    };
+xmlhttp.open("GET", "food.json",true);
+smlhttp.send(); 
         </script>
     </body>
 </html>
