--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
         window.alert(food.name);
         }
     };
-xmlhttp.open("GET", "food.json",true);
-smlhttp.send(); 
+        xmlhttp.open("GET", "food.json",true);
+        xmlhttp.send(); 
         </script>
     </body>
 </html>
