Restaurant Project - Not Finished

--- a/index.html
+++ b/index.html
@@ -1,19 +1,25 @@
 <html>
     <head>
-        
+
     </head>
     <body>
         <script>
-            var xmlhttp = new XMLHttpRequest();
+        var xmlhttp = new XMLHttpRequest();
 
         xmlhttp.onreadystatechange = function() {
         if (this.readyState == 4 && this.status == 200) {
         var mydata = JSON.parse(this.responseText);
-        window.alert(mydata.food[1].name);
-        }
+         }
     };
-        xmlhttp.open("GET", "food.json",true);
-        xmlhttp.send(); 
-        </script>
+    xmlhttp.open("GET", "data.json",true);
+    xmlhttp.send(); 
+</script>
+
+
+
+
+
+
+
     </body>
 </html>
