--- a/checkout.html
+++ b/checkout.html
@@ -1,13 +1,13 @@
 <html class="index">
 <head>
-  <title>Akiara's Diner</title>
+  <title>Yoshinori's Diner</title>
   <link rel="stylesheet" type="text/css" href="style.css">
   <link rel="shortcut icon" type="image/x-icon" href="favicon.ico"/>
   <link href="https://fonts.googleapis.com/css?family=Encode+Sans+Expanded" rel="stylesheet">
 </head>
 <body>
   <header id="head">
-    <a id="headtext">Akiara's Diner</a>
+    <a id="headtext">Yoshinori's Diner</a>
 </header>
 <div id="divleft">
         <p id="font">Here is what you ordered</p>
