--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <html class="index">
 <head>
-  <title>Akiara's Diner - Menu</title>
+  <title>Yoshinori's Diner - Menu</title>
   <link rel="stylesheet" type="text/css" href="style.css">
   <link rel="shortcut icon" type="image/x-icon" href="favicon.ico"/>
   <link href="https://fonts.googleapis.com/css?family=Encode+Sans+Expanded" rel="stylesheet">
   <header id="head">
-      <a id="headtext">Akiara's Diner</a>
+      <a id="headtext">Yoshinori's Diner</a>
   <a id="headbutton" style="text-decoration:none">People hate us on yelp!</a>
   </div>
   </header>
@@ -122,5 +122,9 @@
 <script src="script.js">
 
 </script>
+
+
+
+
 </body>
 </html>
