--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <head>
 </head>
 <body>
-<a href="restaurant/index.html">Restaurant</a>
-<a href="game/index.html">The Grimgame</a>
+<h1>Index of landonasato.github.io</h1>
+<p href="restaurant/index.html">Restaurant</p>
+<p href="game/index.html">The Grimgame</p>
 </body>
 </html>
