--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
 <body>
 <h1>Index of landonasato.github.io</h1>	
 <a href="restaurant/index.html">Restaurant</a>
-<a href="game/index.html">The Grimgame</a>
+<a href="game/multiplayer.html">The Grimgame</a>
 </body>
 </html>
