--- a/game/multiplayer.html
+++ b/game/multiplayer.html
@@ -1,5 +1,6 @@
 <html>
   <head>
+      <link rel="shortcut icon" type="image/x-icon" href="ortler.ico"/>
     <script src="p5.min.js"></script>
     <style>
       body{
