--- a/game/multiplayer.html
+++ b/game/multiplayer.html
@@ -98,7 +98,7 @@
       this.x = w-150;
       this.y = h-150;
       this.show=function(){
-      nofill();
+      noFill();
       //fill(color('#66ffb3'));
         ellipse(this.x,this.y,100,100);
       }
