--- a/game/multiplayer.html
+++ b/game/multiplayer.html
@@ -45,6 +45,7 @@
     function setup() {
       createCanvas(w,h);
       img = loadImage('grimreaper.png');
+      mnky = loadImage('monkey.jpg');
       bg = loadImage('background.jpg');
     }
     function draw() {
@@ -98,6 +99,7 @@
       this.x = w-150;
       this.y = h-150;
       this.show=function(){
+      image(mnky,this.x-100,this.y-100,200,200);
       noFill();
       //fill(color('#66ffb3'));
         ellipse(this.x,this.y,100,100);
