--- a/game/multiplayer.html
+++ b/game/multiplayer.html
@@ -45,7 +45,7 @@
     function setup() {
       createCanvas(w,h);
       img = loadImage('grimreaper.png');
-      mnky = loadImage('monkey.jpg');
+      squid = loadImage('squid.png');
       bg = loadImage('background.jpg');
     }
     function draw() {
@@ -99,7 +99,7 @@
       this.x = w-150;
       this.y = h-150;
       this.show=function(){
-      image(mnky,this.x-100,this.y-100,200,200);
+      image(squid,this.x-100,this.y-100,200,200);
       noFill();
       //fill(color('#66ffb3'));
         ellipse(this.x,this.y,100,100);
