--- a/game/multiplayer.html
+++ b/game/multiplayer.html
@@ -16,7 +16,7 @@
     </style>
   </head>
   <body>
-      <span id="timerDisplay">30 seconds remaining</span><audio src="music.mp4" controls autoplay loop></audio>
+      <span id="timerDisplay">30 seconds remaining</span><audio src="music.mp4" autoplay loop volume="0.5"></audio>
     <script>
     var w = window.innerWidth;
     var h = window.innerHeight;
