--- a/index.html
+++ b/index.html
@@ -5,5 +5,6 @@
 <h1>Index of landonasato.github.io</h1>	
 <a href="restaurant/index.html">Restaurant</a>
 <a href="game/multiplayer.html">The Grimgame</a>
+<a href="gamething/index.html">The bouncy thing</a>
 </body>
 </html>
