renamed folders and updated flappy

--- a/flappy/index.html
+++ b/flappy/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <script src="p5.min.js"></script>
+    <script src="p5.collide2d.min.js"></script>
     <style>
       body{
         overflow:hidden;
@@ -12,5 +13,6 @@
   </head>
   <body>
     <script src="jumper.js"></script>
+    <!--<script src="boxes.js"></script>-->
   </body>
 </html>
