--- a/flappy/index.html
+++ b/flappy/index.html
@@ -4,14 +4,18 @@
     <script src="p5.min.js"></script>
     <script src="p5.collide2d.min.js"></script>
     <style>
-      body{
+      body {
         overflow:hidden;
         margin:0;
         padding:0;
+        font-size: 100px;
+        font-family: "Courier New", Courier, monospace;
+        text-align: center;
       }
     </style>
   </head>
   <body>
+      <span id="timerDisplay">30 seconds remaining</span>
     <script src="jumper.js"></script>
     <!--<script src="boxes.js"></script>-->
   </body>
