--- a/flappy/index.html
+++ b/flappy/index.html
@@ -15,7 +15,7 @@
     </style>
   </head>
   <body>
-      <span id="timerDisplay">30 seconds remaining</span>
+      <!--<span id="timerDisplay">30 seconds remaining</span>-->
     <script src="jumper.js"></script>
     <!--<script src="boxes.js"></script>-->
   </body>
