--- a/flappy/index.html
+++ b/flappy/index.html
@@ -18,6 +18,6 @@
     <!--span id="timerDisplay">30 seconds remaining</span>-->
     <script src="jumper.js"></script>
     <!--<script src="boxes.js"></script>-->
-    <audio src="theme.mp3" autoplay></audio>
+    <audio id="music" src="theme.mp3" autoplay loop></audio>
   </body>
 </html>
