--- a/flappy/game.html
+++ b/flappy/game.html
@@ -18,6 +18,6 @@
     <!--<span id="timerDisplay">30 seconds remaining</span>-->
     <script src="jumper.js"></script>
     <!--<script src="boxes.js"></script>-->
-    <audio id="music" src="minecraft.mp3" autoplay controls loop></audio>
+    <audio id="music" src="yeet.mp3" autoplay  loop></audio>
   </body>
 </html>
