--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <body>
 <h1>Index of landonasato.github.io</h1>	
 <a href="restaurant/index.html">Restaurant</a>
-<a href="grimgame/multiplayer.html">The Grimgame</a>
-<a href="flappy/index.html">The bouncy thing</a>
+<a href="grimgame/multiplayer.html">Grimgame</a>
+<a href="flappy/index.html">TNT</a>
 </body>
 </html>
