--- a/flappy/index.html
+++ b/flappy/index.html
@@ -1,8 +1,17 @@
 <html>
   <head>
-
+<script src="p5.min.js"></script>
   </head>
   <body>
+    <script>
+      function setup() {
+      }
+      function keyPressed() {
+        if(keyCode === 32) {
+        location.href="game.html";
+    }
+      }
+      </script>
       <a href="game.html">Continue</a>
   </body>
 </html>
