--- a/flappy/game.html
+++ b/flappy/game.html
@@ -3,6 +3,7 @@
   <head>
     <script src="p5.min.js"></script>
     <script src="p5.collide2d.min.js"></script>
+    <script src="p5.dom.js"></script>
     <style>
       body {
         overflow:hidden;
