redid index directory

--- a/index.html
+++ b/index.html
@@ -1,10 +1,44 @@
-<html>
+<html class="index">
 <head>
+  <title>landonasato.github.io</title>
+  <link rel="stylesheet" type="text/css" href="/indexfiles/index.css">
+  <link rel="shortcut icon" type="image/x-icon" href="/indexfilesfavicon.ico"/>
+  <link href="https://fonts.googleapis.com/css?family=Encode+Sans+Expanded" rel="stylesheet">
+  <header id="head">
+      <a id="headtext">landonasato.github.io</a>
+  </div>
+  </header>
 </head>
 <body>
-<h1>Index of landonasato.github.io</h1>	
-<a href="restaurant/index.html">Restaurant</a>
-<a href="grimgame/multiplayer.html">Grimgame</a>
-<a href="flappy/index.html">TNT</a>
+
+<div>
+<div id="divleft">
+    <img src="/indexfiles/restaurant.png" id="imageformat">
+    <p id="font">Restaurant</p>
+    <p id="fontsmall">Project 2/4/19</p>
+    <button id="buttonformat" onclick="location.href='/restaurant/index.html'">Go</button>
+</div>
+<div id="divleft">
+    <img src="/indexfiles/grimgame.png" id="imageformat">
+    <p id="font">Grimgame</p>
+    <p id="fontsmall">-</p>
+    <button id="buttonformat" onclick="location.href='/grimgame/multiplayer.html'">Go</button>
+</div>
+<div id="divleft">
+    <img src="/indexfiles/tnt.png" id="imageformat">
+    <p id="font">TNT Dodge</p>
+    <p id="fontsmall">Project 4/19/19</p>
+    <button id="buttonformat" onclick="location.href='/tntdodge/index.html'">Go</button>
+</div>
+
+  
+</div>
+
+
+</script>
+
+
+
+
 </body>
 </html>
