--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
   <title>landonasato.github.io</title>
   <link rel="stylesheet" type="text/css" href="/indexfiles/index.css">
-  <link rel="shortcut icon" type="image/x-icon" href="/indexfilesfavicon.ico"/>
+  <link rel="shortcut icon" type="image/x-icon" href="/indexfiles/favicon.ico"/>
   <link href="https://fonts.googleapis.com/css?family=Encode+Sans+Expanded" rel="stylesheet">
   <header id="head">
       <a id="headtext">landonasato.github.io</a>
@@ -12,6 +12,12 @@
 <body>
 
 <div>
+    <div id="divleft">
+    <img src="/indexfiles/hotel.png" id="imageformat">
+    <p id="font">Hotel</p>
+    <p id="fontsmall">Project 11/28/18</p>
+    <button id="buttonformat" onclick="location.href='/hotel/index.html'">Go</button>
+</div>
 <div id="divleft">
     <img src="/indexfiles/restaurant.png" id="imageformat">
     <p id="font">Restaurant</p>
