added burger project

--- a/index.html
+++ b/index.html
@@ -13,6 +13,12 @@
 
 <div>
     <div id="divleft">
+    <img src="/indexfiles/burger.png" id="imageformat">
+    <p id="font">Burger</p>
+    <p id="fontsmall">Project 9/16/18</p>
+    <button id="buttonformat" onclick="location.href='/burger/index.html'">Go</button>
+</div>
+    <div id="divleft">
     <img src="/indexfiles/hotel.png" id="imageformat">
     <p id="font">Hotel</p>
     <p id="fontsmall">Project 11/28/18</p>
