--- a/index.html
+++ b/index.html
@@ -42,6 +42,12 @@
     <p id="fontsmall">Project 4/19/19</p>
     <button id="buttonformat" onclick="location.href='/tntdodge/index.html'">Go</button>
 </div>
+<div id="divleft">
+        <!--<img src="/indexfiles/tnt.png" id="imageformat">-->
+        <p id="font">3d Modeling</p>
+        <p id="fontsmall">WIP</p>
+        <button id="buttonformat" onclick="location.href='/3dmodel/index.html'">Go</button>
+    </div>
 
   
 </div>
