--- a/index.html
+++ b/index.html
@@ -48,6 +48,12 @@
         <p id="fontsmall">WIP</p>
         <button id="buttonformat" onclick="location.href='/3dmodel/index.html'">Go</button>
     </div>
+    <div id="divleft">
+        <!--<img src="/indexfiles/tnt.png" id="imageformat">-->
+        <p id="font">Webcam</p>
+        <p id="fontsmall">WIP</p>
+        <button id="buttonformat" onclick="location.href='/Webcam/index.html'">Go</button>
+    </div>
 
   
 </div>
