added scsltheme - old

--- a/3dmodel/index.html
+++ b/3dmodel/index.html
@@ -25,6 +25,7 @@
                 rotateY(mouseX/200);
                 rotateX(mouseY/200);
                 texture(img);
+                box(200);
                 //torus(200,64,100,100);
             }
         </script>
