--- a/index.html
+++ b/index.html
@@ -54,6 +54,12 @@
         <p id="fontsmall">WIP</p>
         <button id="buttonformat" onclick="location.href='/Webcam/index.html'">Go</button>
     </div>
+    <div id="divleft">
+        <!--<img src="/indexfiles/tnt.png" id="imageformat">-->
+        <p id="font">Geolocation</p>
+        <p id="fontsmall">WIP</p>
+        <button id="buttonformat" onclick="location.href='/geolocationtest/index.html'">Go</button>
+    </div>
 
   
 </div>
