--- a/geolocationtest/test.html
+++ b/geolocationtest/test.html
@@ -19,8 +19,8 @@
 </head>
 
 <body>
-    <h1>Can you find the treasure?</h1>
-    <p>Directions: Somewhere there is a secret treasure. You must move around to determine how far away you are. Distance is showin in miles.</p>
+    <h1>Can you get home?</h1>
+    <p>Directions: Get home, idiot. Do you really need an app to tell you how to do such a simple task?</p>
     <hr>
     <h1 id="locAvail">Ready</h1>
     <h1 id="distance"></h1>
@@ -29,8 +29,8 @@
         var distance;
         var mylat;
         var mylon;
-        var treasurelat = 21.311285;
-        var treasurelon = -157.837918;
+        var treasurelat = 21.347312;
+        var treasurelon = -157.827528;
         /* calculates distance to a treasure location. Let's the user know how far they are away "in miles" to the treasure*/
         function setup() {
             if (geoCheck() == true) {
@@ -49,16 +49,16 @@
             mylon = position.longitude;
             distance = calcGeoDistance(mylat,mylon,treasurelat,treasurelon,'mi');
             $.getElementById('distance').innerHTML = "You are " + distance.toFixed(5) + " miles away.";
-            if (distance < 0.008) { //The closer the number reaches 0.001, the sensitivity increases.
-                $.getElementById('locAvail').innerHTML = "YOU FOUND THE TREASURE!";
+            if (distance < 0.1) { //The closer the number reaches 0.001, the sensitivity increases.
+                $.getElementById('locAvail').innerHTML = "You managed to get home, you idiot.";
                 $.body.style.backgroundColor = "#E55934";
             }
-            else if (distance < 0.1) {
-                $.getElementById('locAvail').innerHTML = "Getting Warmer";
+            else if (distance < 0.2) {
+                $.getElementById('locAvail').innerHTML = "Getting closer to hell.";
                 $.body.style.backgroundColor = "#FDE74C";
             }
             else {
-                $.getElementById('locAvail').innerHTML = "Cold";
+                $.getElementById('locAvail').innerHTML = "Way off, bitch.";
                 $.body.style.backgroundColor = "#3C91E6";
             }
         }
