--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <button id="buttonformat" onclick="location.href='/tntdodge/index.html'">Go</button>
 </div>
 <div id="divleft">
-        <!--<img src="/indexfiles/tnt.png" id="imageformat">-->
+        <img src="/indexfiles/3dmodel.png" id="imageformat">
         <p id="font">3d Modeling</p>
         <p id="fontsmall">WIP</p>
         <button id="buttonformat" onclick="location.href='/3dmodel/index.html'">Go</button>
@@ -58,7 +58,9 @@
         <!--<img src="/indexfiles/tnt.png" id="imageformat">-->
         <p id="font">Geolocation</p>
         <p id="fontsmall">WIP</p>
-        <button id="buttonformat" onclick="location.href='/geolocationtest/index.html'">Go</button>
+        <button id="buttonformat" onclick="location.href='/geolocationtest/index.html'">Red/Green</button>
+        <button id="buttonformat" onclick="location.href='/geolocationtest/ping.html'">Ping</button>
+        <button id="buttonformat" onclick="location.href='/geolocationtest/test.html'">Treasure</button>
     </div>
 
   
