--- a/index.html
+++ b/index.html
@@ -1,76 +1,14 @@
-<html class="index">
-<head>
-  <title>landonasato.github.io</title>
-  <link rel="stylesheet" type="text/css" href="/indexfiles/index.css">
-  <link rel="shortcut icon" type="image/x-icon" href="/indexfiles/favicon.ico"/>
-  <link href="https://fonts.googleapis.com/css?family=Encode+Sans+Expanded" rel="stylesheet">
-  <header id="head">
-      <a id="headtext">landonasato.github.io</a>
-  </div>
-  </header>
-</head>
-<body>
-
-<div>
-    <div id="divleft">
-    <img src="/indexfiles/burger.png" id="imageformat">
-    <p id="font">Burger</p>
-    <p id="fontsmall">Project 9/16/18</p>
-    <button id="buttonformat" onclick="location.href='/burger/index.html'">Go</button>
-</div>
-    <div id="divleft">
-    <img src="/indexfiles/hotel.png" id="imageformat">
-    <p id="font">Hotel</p>
-    <p id="fontsmall">Project 11/28/18</p>
-    <button id="buttonformat" onclick="location.href='/hotel/index.html'">Go</button>
-</div>
-<div id="divleft">
-    <img src="/indexfiles/restaurant.png" id="imageformat">
-    <p id="font">Restaurant</p>
-    <p id="fontsmall">Project 2/4/19</p>
-    <button id="buttonformat" onclick="location.href='/restaurant/index.html'">Go</button>
-</div>
-<div id="divleft">
-    <img src="/indexfiles/grimgame.png" id="imageformat">
-    <p id="font">Grimgame</p>
-    <p id="fontsmall">-</p>
-    <button id="buttonformat" onclick="location.href='/grimgame/multiplayer.html'">Go</button>
-</div>
-<div id="divleft">
-    <img src="/indexfiles/tnt.png" id="imageformat">
-    <p id="font">TNT Dodge</p>
-    <p id="fontsmall">Project 4/19/19</p>
-    <button id="buttonformat" onclick="location.href='/tntdodge/index.html'">Go</button>
-</div>
-<div id="divleft">
-        <img src="/indexfiles/3dmodel.png" id="imageformat">
-        <p id="font">3d Modeling</p>
-        <p id="fontsmall">WIP</p>
-        <button id="buttonformat" onclick="location.href='/3dmodel/index.html'">Go</button>
-    </div>
-    <div id="divleft">
-        <!--<img src="/indexfiles/tnt.png" id="imageformat">-->
-        <p id="font">Webcam</p>
-        <p id="fontsmall">WIP</p>
-        <button id="buttonformat" onclick="location.href='/Webcam/index.html'">Go</button>
-    </div>
-    <div id="divleft">
-        <!--<img src="/indexfiles/tnt.png" id="imageformat">-->
-        <p id="font">Geolocation</p>
-        <p id="fontsmall">WIP</p>
-        <button id="buttonformat" onclick="location.href='/geolocationtest/index.html'">Red/Green</button>
-        <button id="buttonformat" onclick="location.href='/geolocationtest/ping.html'">Ping</button>
-        <button id="buttonformat" onclick="location.href='/geolocationtest/test.html'">Treasure</button>
-    </div>
-
-  
-</div>
-
-
-</script>
-
-
-
-
-</body>
-</html>
+<html>
+    <head>
+        <style>
+            .formatImage {
+                background-size: cover;
+                height: 100vh;
+                width: 100vw;
+            }
+        </style>
+    </head>
+    <body>
+        <img src="https://i.ibb.co/5Lr67nV/painpeko.png" class="formatImage">
+    </body>
+    </html>
