Updating Landing Page

--- a/index.html
+++ b/index.html
@@ -1,14 +1,31 @@
-<html>
-    <head>
-        <style>
-            .formatImage {
-                background-size: cover;
-                height: 100vh;
-                width: 100vw;
-            }
-        </style>
-    </head>
-    <body>
-        <img src="https://i.ibb.co/5Lr67nV/painpeko.png" class="formatImage">
-    </body>
-    </html>
+<html class="index">
+<head>
+  <title>Landon Asato</title>
+  <link rel="stylesheet" type="text/css" href="/indexfiles/index.css">
+  <link rel="shortcut icon" type="image/x-icon" href="/indexfiles/favicon.ico"/>
+  <link href="https://fonts.googleapis.com/css?family=Encode+Sans+Expanded" rel="stylesheet">
+  <header id="head">
+      <a id="headtext">landonasato.github.io</a>
+  </div>
+  </header>
+</head>
+<body>
+
+<div>
+    <div id="divleft">
+    <img src="/indexfiles/burger.png" id="imageformat">
+    <p id="font">Burger</p>
+    <p id="fontsmall">Project 9/16/18</p>
+    <button id="buttonformat" onclick="location.href='/burger/index.html'">Go</button>
+</div>
+  
+</div>
+
+
+</script>
+
+
+
+
+</body>
+</html>
