--- a/subPages/photo.html
+++ b/subPages/photo.html
@@ -8,18 +8,15 @@
       <a id="headtext">Landon Asato</a>
   </div>
   </header>
-  <script>
-    window.location.replace('https://landonasato.myportfolio.com');
-  </script>
 </head>
 <body>
 
 <div>
     <div id="divleft">
-    <img src="https://cdn.discordapp.com/attachments/1015428048704774154/1022104979500183562/IMG_1795_jpg.jpg" id="imageformat">
-    <p id="font">Photography</p>
-    <p id="fontsmall">Works as a professional photographer on the side.</p>
-    <button id="buttonformat" onclick="location.href='/subPages/photo.html'">Go</button>
+    <img src="/indexfiles/burger.png" id="imageformat">
+    <p id="font">Burger</p>
+    <p id="fontsmall">Project 9/16/18</p>
+    <button id="buttonformat" onclick="location.href='/burger/index.html'">Go</button>
 </div>
   
 </div>
